# yy-battery-notifier-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE.rtf  Makefile  README.md  default_settings.toml  expand.rs  justfile  rust-toolchain.toml  yy-battery-notifier-rs.wixproj  yy-battery-notifier-rs.wxs
.zed/: debug.json
docs/ja/: README.md  default_settings.toml
ja/: README.md
src/: aumid.rs  battery.rs  cli.rs  common.rs  main.rs  notify.rs  registry.rs  runner.rs  settings.rs  startup.rs  taskbar_icon.rs
src/notification/: mod.rs  tauri_winrt.rs  tauri_winrt_toast.rs  win32_notif.rs  winrt_toast_reborn.rs
