[package]
name = "yy-battery-notifier-rs"
description = "Check battery level & Notify you!"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = {version="1.0.97",features = ["backtrace"]}
clap = { version = "4.5.32", features = ["derive", "string", "unicode"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tauri-winrt-notification = "0.7.1"
toml = "0.8.20"

[dependencies.windows]
version = "0.60.0"
features = [
    "System_Power",
    "Devices_Power",
    "Win32_System_Power",
]
