[package]
name = "yy-battery-notifier-rs"
description = "Check battery level & Notify you!"
authors = ["yy-tromb"]
license = "MIT"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = {version="1.0.97",features = ["backtrace"]}
clap = { version = "4.5.35", features = ["derive", "string", "unicode"] }
colored = "3.0.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tauri-winrt-notification = "0.7.2"
toml = "0.9.4"
windows-registry = "0.6.1"
winrt-toast-reborn = "0.3.8"

[dependencies.windows]
version = "0.62.2"
features = [
    "System_Power",
    # "Devices_Power",
    "Win32_System_Power",
    "Win32_System_Registry",
    # "ApplicationModel",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console"
]

[features]
default = []
gui = []

[profile.dev]
opt-level = 0
lto="off"
strip = "none"

[profile.release]
opt-level = 3
lto = "fat"
strip="debuginfo"
